--- a/config
+++ b/config
@@ -125,8 +125,8 @@ time series used:
 1. is it irregular
 2. the type of data
 [22-01-20 a math model for self-destruct]
+[22-01-30 multi-agent arbitrage model]
 
 [Unknown continue searching along https://www.google.com/search?q=quant+trading+wiki&ei=LvzkYbesHNfOkPIPzJizqA8&start=30&sa=N&ved=2ahUKEwi3--_HhLj1AhVXJ0QIHUzMDPU4FBDy0wN6BAgBEEE&biw=1024&bih=361&dpr=2.5]
-[Unknown read Liu Jun's recommendation on basic econometrics? But what problem am I aiming for by doing this? arbitrage?]
 [Unknown read http://docs.lhpedersen.com/DynamicTrading.pdf as to check how to do optimal timing]
 [unknown mean reversion and trend must hedge to 0, otherwise arbitrage?]
