--- a/config
+++ b/config
@@ -6,7 +6,17 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 16 17 18 19 20 21 22  20 21 22 23 24 25 26
 23 24 25 26 27 28 29  27 28               
 30 31                                     
--=-=-=-=-=-=-=-=Sun Jan 30 17:01:03 PST 2022-=-=-=-=-=-=-=-=
+-=-=-=-=-=-=-=-=Sun Jan 30 17:15:07 PST 2022-=-=-=-=-=-=-=-=
+
+[22-01-30 piles to do]
+2. interview prep
+4. arbitrage thesis --> 
+5. nlp 
+
+1. look at target papers
+2. look at prof's paper
+3. generate a basic connection idea and ask prof
+
 
 [22-01-30 8pm Allan Report]
 1. introduction
