--- a/config
+++ b/config
@@ -6,7 +6,7 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 16 17 18 19 20 21 22  20 21 22 23 24 25 26
 23 24 25 26 27 28 29  27 28               
 30 31                                     
--=-=-=-=-=-=-=-=Sun Jan 30 17:19:36 PST 2022-=-=-=-=-=-=-=-=
+-=-=-=-=-=-=-=-=Sun Jan 30 17:47:24 PST 2022-=-=-=-=-=-=-=-=
 
 [22-01-30 piles to do]
 2. interview prep
@@ -14,8 +14,11 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 5. nlp 
 
 1. look at target papers
+	---> nlp trading
+	---> statistical arbitrage
 2. look at prof's paper
 	allan timmermann
+	
 	
 3. generate a basic connection idea and ask prof
 
