--- a/config
+++ b/config
@@ -14,9 +14,11 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 5. nlp 
 
 1. look at target papers
+	---> AI
+
 	---> nlp trading
-	---> statistical arbitrage
-2. look at prof's paper
+	---> (statistical) arbitrage
+2. look at prof's intro/paper
 	allan timmermann
 	
 	
