--- a/config
+++ b/config
@@ -6,14 +6,14 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 16 17 18 19 20 21 22  20 21 22 23 24 25 26
 23 24 25 26 27 28 29  27 28               
 30 31                                     
--=-=-=-=-=-=-=-=Sun Jan 30 17:47:24 PST 2022-=-=-=-=-=-=-=-=
+-=-=-=-=-=-=-=-=Sun Jan 30 18:43:10 PST 2022-=-=-=-=-=-=-=-=
 
 [22-01-30 piles to do]
 2. interview prep
 4. arbitrage thesis --> 
 5. nlp 
 
-1. look at target papers
+1. look at target papers and how is it actually done?
 	---> AI
 
 	---> nlp trading
