--- a/config
+++ b/config
@@ -19,7 +19,13 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 	---> nlp trading
 	---> (statistical) arbitrage
 2. look at prof's intro/paper
-	allan timmermann
+	allan timmermann --> arbitrage paper
+	jun liu --> arbitrage paper
+	
+	rayan saab
+	alex cloninger
+	
+	
 	
 	
 3. generate a basic connection idea and ask prof
