--- a/config
+++ b/config
@@ -17,7 +17,7 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 	---> AI
 
 	---> nlp trading
-	---> (statistical) arbitrage
+	---> (statistical) arbitrage --> signal processing
 2. look at prof's intro/paper
 	allan timmermann --> arbitrage paper
 	jun liu --> arbitrage paper
