--- a/config
+++ b/config
@@ -23,7 +23,9 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 	jun liu --> arbitrage paper
 	
 	rayan saab
-	alex cloninger
+	
+	leon
+	ndapa
 	
 	
 	
