--- a/config
+++ b/config
@@ -6,7 +6,14 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 16 17 18 19 20 21 22  20 21 22 23 24 25 26
 23 24 25 26 27 28 29  27 28               
 30 31                                     
--=-=-=-=-=-=-=-=Sun Jan 30 18:43:10 PST 2022-=-=-=-=-=-=-=-=
+-=-=-=-=-=-=-=-=Sun Jan 30 19:13:14 PST 2022-=-=-=-=-=-=-=-=
+[22-01-30 q to answer]
+1. how arbitrage trading
+2. how is trading related to signal processing, search google
+3. how is trading related NLP, search google
+4. can you finish the allan work
+
+
 
 [22-01-30 piles to do]
 2. interview prep
