--- a/config
+++ b/config
@@ -9,11 +9,16 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 -=-=-=-=-=-=-=-=Sun Jan 30 19:13:14 PST 2022-=-=-=-=-=-=-=-=
 [22-01-30 q to answer]
 1. how arbitrage trading
-2. how is trading related to signal processing, search google
-3. how is trading related NLP, search google
+	how is that related to JUn and Allan's paper?
+2. how is trading related to signal processing, search google?
+	if anything, how is that relted to Alex or Rayan Saab's paper?
+3. how is trading related NLP, search google?
+	if anything, how is that related to Ndapa and Leon's paper?
 4. can you finish the allan work
 
-
+5. can you buy noodles, toothpaste with extra ingredient
+6. can you call home?
+7. can you review 200?
 
 [22-01-30 piles to do]
 2. interview prep
