--- a/config
+++ b/config
@@ -1,12 +1,23 @@
-    January 2022          February 2022   
+    February 2022          March 2022     
 Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
-                   1         1  2  3  4  5
- 2  3  4  5  6  7  8   6  7  8  9 10 11 12
- 9 10 11 12 13 14 15  13 14 15 16 17 18 19
-16 17 18 19 20 21 22  20 21 22 23 24 25 26
-23 24 25 26 27 28 29  27 28               
-30 31                                     
--=-=-=-=-=-=-=-=Sun Jan 30 19:13:14 PST 2022-=-=-=-=-=-=-=-=
+       1  2  3  4  5         1  2  3  4  5
+ 6  7  8  9 10 11 12   6  7  8  9 10 11 12
+13 14 15 16 17 18 19  13 14 15 16 17 18 19
+20 21 22 23 24 25 26  20 21 22 23 24 25 26
+27 28                 27 28 29 30 31      
+                                          
+-=-=-=-=-=-=-=-=Wed Feb  9 17:51:26 PST 2022-=-=-=-=-=-=-=-=
+[2022-02-16 Ndapa]
+	1. single language --> event predicon (e.g.) riot/natural disaster
+	2. multi-language ---> consistent embedding or inconsistent arbitrage
+	3. difference between transformer and word2vec/seq2seq
+		randomly initialized embedding -> contextualize --> the word -> improving embedding 
+	
+
+
+
+
+
 [22-01-30 q to answer]
 1. how arbitrage trading
 	how is that related to JUn and Allan's paper?
