--- a/config
+++ b/config
@@ -14,7 +14,8 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 	3. difference between transformer and word2vec/seq2seq
 		randomly initialized embedding -> contextualize --> the word -> improving embedding 
 	https://cse.ucsd.edu/people/administrative-staff/julie-conner
-		
+[list]
+	
 	
 
 [22-01-30 q to answer]
